--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "copy-of-gaseng-pmt-rev-2-beta",
+  "name": "gaseng-pmt-rev-1-beta",
   "private": true,
   "version": "0.0.0",
   "type": "module",
