--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gaseng-pmt-rev-4-beta",
+  "name": "eng-pmt-version-1.1",
   "private": true,
   "version": "0.0.0",
   "type": "module",
