--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eng-pmt-version-1.1",
+  "name": "eng-pmt-version-1.3-fixed-with-change-orders",
   "private": true,
   "version": "0.0.0",
   "type": "module",
